[tool.poetry]
description = "Chatbot-evaluate repository for PagoPA"
name = "chatbot-evaluate"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
# cryptography = "^44.0.2"
# hypercorn = "^0.17.3"
langfuse = "^2.60.2"
llama-index = "^0.13.0"
llama-index-embeddings-bedrock = "^0.5.0"
llama-index-embeddings-google-genai = "^0.1.0"
llama-index-llms-bedrock-converse = "^0.4.15"
llama-index-llms-google-genai = "^0.1.7"
# nh3 = "^0.2.21"
# pyproject-hooks = "^1.2.0"
python = ">=3.12,<3.14"
# python-dotenv = "^1.1.0"
# python-jose = "^3.4.0"
pyyaml = "^6.0.2"
ragas = "^0.2.14"
# requests-auth-aws-sigv4 = "^0.7"
toml = "^0.10.2"

[tool.poetry.group.test.dependencies]
httpx = "^0.28.1"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
