[tool.poetry]
description = "Chatbot-monitor repository for PagoPA"
name = "chatbot-monitor"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
boto3 = "^1.40.40"
langdetect = "^1.0.9"
langfuse = "^3.5.2"
llama-index = "^0.14.3"
presidio-analyzer = "^2.2.360"
presidio-anonymizer = "^2.2.360"
pydantic-settings = "^2.11.0"
python = ">=3.12,<3.14"

[tool.poetry.group.test.dependencies]
httpx = "^0.28.1"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
