[tool.poetry]
description = "Chatbot repository for PagoPA"
name = "chatbot"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
boto3 = "^1.40.4"
cryptography = "^44.0.2"
fastapi = "^0.115.12"
google-cloud-discoveryengine = "^0.13.8"
html2text = "^2024.2.26"
langdetect = "^1.0.9"
langfuse = "^2.60.2"
llama-index = "^0.13.0"
llama-index-embeddings-google-genai = "^0.1.0"
llama-index-llms-google-genai = "^0.1.7"
llama-index-postprocessor-presidio = "^0.3.0"
llama-index-storage-docstore-redis = "^0.3.0"
llama-index-storage-index-store-redis = "^0.4.0"
llama-index-vector-stores-redis = "^0.5.0"
mangum = "^0.19.0"
nh3 = "^0.2.21"
pydantic-settings = "^2.10.1"
pyjwt = "^2.10.1"
python = ">=3.12,<3.14"
python-jose = "^3.4.0"
pyyaml = "^6.0.2"
toml = "^0.10.2"
spacy = "^3.8.7"
nltk = "^3.9.2"
hypercorn = "^0.17.3"

[tool.poetry.group.test.dependencies]
httpx = "^0.28.1"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
hypercorn = "^0.17.3"
jupyterlab = "^4.4.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
