[tool.poetry]
description = "Chatbot repository for PagoPA"
name = "chatbot"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
boto3 = "^1.42.54"
cryptography = "^46.0.5"
fastapi = "^0.131.0"
google-cloud-discoveryengine = "^0.17.0"
hypercorn = "^0.18.0"
llama-index = "^0.14.15"
llama-index-embeddings-google-genai = "^0.3.2"
llama-index-llms-google-genai = "^0.8.7"
llama-index-storage-docstore-redis = "^0.4.1"
llama-index-storage-index-store-redis = "^0.5.1"
llama-index-vector-stores-redis = "^0.6.2"
mangum = "^0.21.0"
nh3 = "^0.3.3"
nltk = "^3.9.2"
openinference-instrumentation-llama-index = "^4.3.9"
pydantic-settings = "^2.13.1"
pyjwt = "^2.11.0"
python = ">=3.12,<3.14"
python-jose = "^3.5.0"
pyyaml = "^6.0.3"
toml = "^0.10.2"

[tool.poetry.group.test.dependencies]
httpx = "^0.28.1"
pytest = "^9.0.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
jupyterlab = "^4.5.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
