[tool.poetry]
description = "Extractor service for JSON files re-elaboration"
name = "extractor"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
boto3 = "^1.42.54"
llama-index = "^0.14.15"
llama-index-embeddings-google-genai = "^0.3.2"
llama-index-llms-google-genai = "^0.8.7"
pydantic-settings = "^2.13.1"
python = ">=3.12,<=3.14.3"
pyyaml = "^6.0.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
jupyterlab = "^4.4.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
